--- a/news/static/news/styles.css
+++ b/news/static/news/styles.css
@@ -60,6 +60,7 @@ li {
     margin-bottom: 30px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border: 2px solid #333333;
     transition: background-color 0.3s ease;
 }
 
