--- a/news/templates/news/daily_summary.html
+++ b/news/templates/news/daily_summary.html
@@ -63,14 +63,18 @@
       font-size: 1.2rem;
 
     }
-    .article-slide img{
+    .article-slide img {
       display: block;
       margin: 1rem auto;
-      max-width: 80%;
+      max-width: 100%;
       max-height: 400px;
+      width: auto;
       height: auto;
-      border: solid 2px black;
+      border: 2px solid black;
+      object-fit: contain;
     }
+
+
     .article-slide.active {
       opacity: 1;
       transform: translateX(0);
