--- a/news/templates/news/home_politics.html
+++ b/news/templates/news/home_politics.html
@@ -4,15 +4,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> Daily Tech News Summary</title>
+    <title> Daily Politics News Summary</title>
     <link rel="stylesheet" href="{% static 'news/styles.css' %}">
 </head>
 <body>
     <button class="theme-toggle-btn" onclick="toggleTheme()">🌙</button>
-    <h1><a href="{% url 'global_home' %}">Daily Tech News Summary</a></h1>
+    <h1><a href="{% url 'global_home' %}">Daily Politics News Summary</a></h1>
     <ul style="font-size: 35px">
     {% for date in dates %}
-        <li><a href="{% url 'daily_summary_by_date' date.url %}">{{ date.display }}</a></li>
+        <li><a href="{% url 'daily_summary_by_date_politics' date.url %}">{{ date.display }}</a></li>
     {% endfor %}
     </ul>
     <script>
